src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__citation_missing_brace.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\cite{foo\"#)"

---
ROOT@0..9
  PREAMBLE@0..9
    CITATION@0..9
      CITATION_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..9
        L_CURLY@5..6 "{"
        WORD@6..9 "foo"
        MISSING@9..9 ""

