src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__citation_prenote.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\cite[foo]{bar}\"#)"

---
ROOT@0..15
  PREAMBLE@0..15
    CITATION@0..15
      CITATION_NAME@0..5 "\\cite"
      BRACK_GROUP@5..10
        L_BRACK@5..6 "["
        TEXT@6..9
          WORD@6..9 "foo"
        R_BRACK@9..10 "]"
      CURLY_GROUP_WORD_LIST@10..15
        L_CURLY@10..11 "{"
        WORD@11..14 "bar"
        R_CURLY@14..15 "}"

