src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__citation_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\cite{foo}\"#)"

---
ROOT@0..10
  PREAMBLE@0..10
    CITATION@0..10
      CITATION_NAME@0..5 "\\cite"
      CURLY_GROUP_WORD_LIST@5..10
        L_CURLY@5..6 "{"
        WORD@6..9 "foo"
        R_CURLY@9..10 "}"

