src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__citation_star.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\nocite{*}\"#)"

---
ROOT@0..10
  PREAMBLE@0..10
    CITATION@0..10
      CITATION_NAME@0..7 "\\nocite"
      CURLY_GROUP_WORD_LIST@7..10
        L_CURLY@7..8 "{"
        WORD@8..9 "*"
        R_CURLY@9..10 "}"

