src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__class_include_empty.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\documentclass{}\"#)"

---
ROOT@0..16
  PREAMBLE@0..16
    CLASS_INCLUDE@0..16
      CLASS_INCLUDE_NAME@0..14 "\\documentclass"
      CURLY_GROUP_WORD_LIST@14..16
        L_CURLY@14..15 "{"
        R_CURLY@15..16 "}"

