src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__class_include_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\documentclass{article}\"#)"

---
ROOT@0..23
  PREAMBLE@0..23
    CLASS_INCLUDE@0..23
      CLASS_INCLUDE_NAME@0..14 "\\documentclass"
      CURLY_GROUP_WORD_LIST@14..23
        L_CURLY@14..15 "{"
        WORD@15..22 "article"
        R_CURLY@22..23 "}"

