src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__color_reference_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\color{black}\"#)"

---
ROOT@0..13
  PREAMBLE@0..13
    COLOR_REFERENCE@0..13
      COLOR_REFERENCE_NAME@0..6 "\\color"
      CURLY_GROUP_WORD@6..13
        L_CURLY@6..7 "{"
        WORD@7..12 "black"
        R_CURLY@12..13 "}"

